# salary-parser

./: CONTRIBUTING.md  README.md  pyproject.toml  salary_parser.py  test_salary_parser.py
.github/workflows/: tests.yml
